refactor: Improve layout structure and remove unused code
This commit improves the layout structure in the 'layout.tsx' file by removing unused code and simplifying the component hierarchy. It removes the unused 'dynamic' import and 'LoadingSpinner' component. Additionally, it removes the unnecessary CSS class and updates the body element with the 'nohemi' class. These changes enhance the codebase by reducing complexity and improving maintainability.

--- a/editor/styles/global.css
+++ b/editor/styles/global.css
@@ -50,6 +50,10 @@
 }
 
 @layer base {
+    * {
+        @apply m-0 box-border p-0;
+    }
+
     body {
         --tw-bg-opacity: 1;
         scrollbar-width: thin;
@@ -65,5 +69,7 @@
         ::-webkit-scrollbar-thumb {
             @apply bg-default;
         }
+
+        @apply min-h-dvh overflow-hidden scroll-smooth bg-background antialiased;
     }
 }
